trunk/Archive2/2b/909f2cd9c2a2fb/output
main.cpp:3:10: error: variable has incomplete type 'void'
    void v;
         ^
1 error generated.
